--- a/index.html
+++ b/index.html
@@ -8,7 +8,50 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div class=" bg-amber-300" id="app">hi</div>
+    <div class="flex flex-row">
+      <div class="bg-[#aad1da] h-screen w-[35vw]">
+
+        <div class="search-loco">
+          <input type="search" name="location" placeholder="location">
+        </div>
+
+        <div class="weather-logo">
+          <img src="" alt="">
+        </div>
+
+        <div class="weather-info">
+          <p>31</p>
+          <p>Mostly cloudy</p>
+        </div>
+
+        <div class="line">
+          underline
+        </div>
+
+        <div class="discription">
+          <p>21-July-2024</p>
+          <p>fri,12:44pm</p>
+          <p>day</p>
+        </div>
+
+        <div class="location">
+          <p>daka</p>
+        </div>
+
+      </div>
+
+      <div class="bg-[#c78484] h-screen w-[65vw]">
+
+        <div class="right-main">
+          <div class="first-row">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+          </div>
+        </div>
+
+      </div>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
