--- a/index.html
+++ b/index.html
@@ -1,66 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/styles.css" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div class="flex flex-row">
-      <div
-        class="container-left bg-[#ffffff] h-screen w-[35vw] flex flex-col items-center">
-       <div class="search-container">
-         <input type="text" id="search-loco" name="location" class="border-2 border-solid border-black rounded-[0.5rem] m-5 p-5px w-70 h-10" >
-        <button type="button" onclick="getCityInfo()" class="border-2 transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 ... w-30 rounded-[0.5rem]  ">Search</button>
 
-       </div>
-        <div class="weather-logo">
-          <img src="" alt="" />
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/src/styles.css" />
+  <title>Weather App</title>
+</head>
 
-        <div class="weather-info">
-          <p>31</p>
-          <p>Mostly cloudy</p>
-        </div>
-
-        <div class="line">underline</div>
-
-        <div class="discription">
-          <p>21-July-2024</p>
-          <p>fri,12:44pm</p>
-          <p>day</p>
-        </div>
-
-        <div class="location">
-          <p>daka</p>
-        </div>
+<body>
+  <div class="flex flex-row">
+    <div class="container-left bg-[#ffffff] h-screen w-[35vw] flex flex-col items-center">
+      <div class="search-container">
+        <input type="text" id="search-loco" name="location"
+          class="border-2 border-solid border-black rounded-[0.5rem] m-5 p-1 w-70 h-10" placeholder="Enter city" />
+        <button type="button" onclick="getCityInfo()"
+          class="border-2 transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 w-30 rounded-[0.5rem]">
+          Search
+        </button>
+      </div>
+      <div class="d">
+        <img src="" alt="Weather Icon" id="weather-logo" />
       </div>
 
-      <div class="container-right bg-[#b4adad] h-screen w-[65vw]">
-        <div class="container-right-inner">
-          <div class="first-row">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-          </div>
+      <div class="weather-info">
+        <p id="temperature">--°C</p>
+        <p id="weather-type">--</p>
+      </div>
 
-          <div class="second-row">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-          </div>
+      <div class="line">underline</div>
 
-          <div class="third-row">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
+      <div class="description">
+        <p id="date">--</p>
+        <p id="time">--</p>
+        <p id="daytime">--</p>
+      </div>
+
+      <div class="location">
+        <p id="city">--</p>
+      </div>
+    </div>
+
+    <div class="container-right bg-[#b4adad] h-screen w-[65vw]">
+      <div class="container-right-inner">
+        <div class="first-row">
+          <div id="wind">Wind: -- km/h</div>
+          <div id="humidity">Humidity: --%</div>
+          <div id="feelsLike">Feels Like: --°C</div>
+        </div>
+
+        <div class="second-row">
+          <div id="visibility">Visibility: -- km</div>
+          <div id="pressure">Pressure: -- hPa</div>
+          <div id="clouds">Clouds: --%</div>
+        </div>
+
+        <div class="third-row">
+          <div>
+            <p id="temp-max">Max Temp: --°C</p>
+            <p id="temp-min">Min Temp: --°C</p>
+          </div>
+          <div>
+            <p id="sunrise">Sunrise: --</p>
+            <p id="sunset">Sunset: --</p>
+          </div>
+          <div>
+            <p id="seaLevel">Sea Level: --</p>
+            <p id="groundLevel">Ground Level: --</p>
           </div>
         </div>
       </div>
     </div>
-    <script type="module" src="/src/main.js"></script>
-    <script src="/src/weatherlogic.js"></script>
-  </body>
+  </div>
+
+  <script type="module" src="/src/main.js"></script>
+  <script src="/src/weatherlogic.js"></script>
+</body>
+
 </html>
