--- a/index.html
+++ b/index.html
@@ -42,30 +42,30 @@
       </div>
     </div>
 
-    <div class="container-right bg-[#b4adad] h-screen w-[65vw]">
-      <div class="container-right-inner">
-        <div class="first-row">
-          <div id="wind">Wind: -- km/h</div>
-          <div id="humidity">Humidity: --%</div>
-          <div id="feelsLike">Feels Like: --°C</div>
+    <div class="container-right  bg-[#b4adad] h-screen w-[65vw]">
+      <div class="container-right-inner  ">
+        <div class="first-row flex justify-around my-28">
+          <div id="wind" class="border-2 bg-blue-300 w-[15rem] h-[8rem] flex justify-center items-center rounded-2xl text-2xl shadow-2xs">Wind: -- km/h</div>
+          <div id="humidity" class="border-2 bg-blue-300 w-[15rem] h-[8rem] flex justify-center items-center rounded-2xl text-2xl shadow-2xs" >Humidity: --%</div>
+          <div id="feelsLike" class="border-2 bg-blue-300 w-[15rem] h-[8rem] flex justify-center items-center rounded-2xl text-2xl shadow-2xs">Feels Like: --°C</div>
         </div>
 
-        <div class="second-row">
-          <div id="visibility">Visibility: -- km</div>
-          <div id="pressure">Pressure: -- hPa</div>
-          <div id="clouds">Clouds: --%</div>
+        <div class="second-row flex justify-around my-28">
+          <div id="visibility" class="border-2 bg-blue-300 w-[15rem] h-[8rem] flex justify-center items-center rounded-2xl text-2xl shadow-2xs">Visibility: -- km</div>
+          <div id="pressure" class="border-2 bg-blue-300 w-[15rem] h-[8rem] flex justify-center items-center rounded-2xl text-2xl shadow-2xs">Pressure: -- hPa</div>
+          <div id="clouds" class="border-2 bg-blue-300 w-[15rem] h-[8rem] flex justify-center items-center rounded-2xl text-2xl shadow-2xs">Clouds: --%</div>
         </div>
 
-        <div class="third-row">
-          <div>
+        <div class="third-row flex justify-around my-28 ">
+          <div class="flex flex-col border-2 bg-blue-300 w-[15rem] h-[8rem] justify-center items-center rounded-2xl text-2xl shadow-2xs">
             <p id="temp-max">Max Temp: --°C</p>
             <p id="temp-min">Min Temp: --°C</p>
           </div>
-          <div>
+          <div class="flex flex-col border-2 bg-blue-300 w-[15rem] h-[8rem] justify-center items-center rounded-2xl text-2xl shadow-2xs">
             <p id="sunrise">Sunrise: --</p>
             <p id="sunset">Sunset: --</p>
           </div>
-          <div>
+          <div class="flex flex-col border-2 bg-blue-300 w-[15rem] h-[8rem] justify-center items-center rounded-2xl text-2xl shadow-2xs">
             <p id="seaLevel">Sea Level: --</p>
             <p id="groundLevel">Ground Level: --</p>
           </div>
